tests/baselines/reference/privacyCheckAnonymousFunctionParameter.errors.txt
privacyCheckAnonymousFunctionParameter.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== privacyCheckAnonymousFunctionParameter.ts (1 errors) ====
    export var x = 1;  // Makes this an external module
    interface Iterator<T> {
    }
    
    module Query {
           ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function fromDoWhile<T>(doWhile: (test: Iterator<T>) => boolean): Iterator<T> {
            return null;
        }
    
        function fromOrderBy() {
            return fromDoWhile(test => {
                return true;
            });
        }
    }
    